@@ -1,1 +1,31 @@
 # PokeBattle
+
+This is a JavaFX game made by Hemang Dash for CS 1331 (Introduction to Object-Oriented Programming) in Fall 2019.
+
+### About the Game
+1. You and the computer will both get 3 pokemons each.
+2. You have 2 training kits, 1 health potion and 1 secret poison.
+3. You always get the first move!
+4. You can also choose which Pokemon you wish to fight with.
+5. There are three difficulties for this game: Easy, Medium and Hard.
+
+### Installing the Game
+    Compile the game using the following command:
+    $ javac --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls *.java
+    Play the game using the following command:
+    $ java --module-path javafx-sdk-11.0.2/lib --add-modules=javafx.controls PokeBattle
+
+### Playing the Game
+You get four options during the game:
+- **FIGHT**: You can fight the Computer's Pokemon with any one four moves of your Pokemon.
+- **BAG**: You can access the Training Kit, Health Potion, Identity Card and Secret Poison here.
+- **POKeMON**: You can change the Pokemon you wish to fight with.
+- **RUN**: Exit the game and accept loss. :(
+
+### How to Win
+Defeat all the Computer's Pokemons.
+
+### How to Lose
+You lose if all your Pokemons faint or you decide to run.
+
+Good Luck with Pacman Redux!
